--- a/app/globals.css
+++ b/app/globals.css
@@ -148,6 +148,71 @@ nav {
     background-color: #97e7f5;
 }
 
+/*dashboard booking form*/
+.walk-form {
+    display: grid;
+    place-items: center;
+    margin-top: 80px;
+    text-align: center;
+}
+
+.walk-form-nav {
+    background-color: white;
+    width: 600px;
+    height: 500px;
+    border-radius: 10px;
+    display: grid;
+    place-items: center;
+
+}
+
+.walk-form-nav h2 {
+    font-size: 24px;
+    font-weight: 600;
+    margin-right: 70px;
+    margin-bottom: 30px;
+}
+
+.booking-form {
+    width: 600px;
+    height: 400px;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    text-align: left;
+    margin-left: 40px;
+    font-size: 24px;
+}
+
+
+.bookfrom-input {
+    font-size: 24px;
+    width: 300px;
+    border: 2px solid gray;
+    float: right;
+    border-radius: 5px;
+    margin-right: 70px;
+    margin-bottom: 20px;
+    color: rgb(95, 94, 94);
+
+}
+
+.form-btn {
+    width: 250px;
+    height: 60px;
+    background-color: #b7bced;
+    color: black;
+    border-radius: 40px;
+    font-size: 24px;
+    font-weight: 600;
+    border: 3px solid black;
+    margin-left: 120px;
+    cursor: pointer;
+}
+
+.form-btn:hover {
+    background-color: #97e7f5;
+}
+
 
 
 /*404 not found*/
