--- a/app/globals.css
+++ b/app/globals.css
@@ -226,14 +226,16 @@ nav {
 
 .auth-container {
     margin-top: 50px;
-    width: 400px;
-    height: 250px;
+    width: 460px;
+    height: 300px;
     background-color: white;
     border-radius: 10px;
 }
 
 .auth-container h2 {
     text-align: center;
+    font-size: 28px;
+    color: rgb(103, 100, 100);
 }
 
 .authform {
@@ -241,6 +243,7 @@ nav {
     grid-template-rows: 1fr 1fr 2fr;
     gap: 20px;
     font-size: 24px;
+    margin-top: 40px;
 }
 
 .authform-span {
@@ -248,7 +251,37 @@ nav {
 }
 
 .authform-label {
-    margin-left: 20px;
+    margin-left: 30px;
+    font-weight: 400;
+}
+
+.authform-input {
+    font-size: 24px;
+    width: 200px;
+    border: 2px solid gray;
+    float: right;
+    border-radius: 5px;
+    margin-right: 30px;
+    color: rgb(95, 94, 94);
+}
+
+.authform-btn {
+    width: 150px;
+    height: 40px;
+    background-color: #b7bced;
+    color: black;
+    border-radius: 40px;
+    font-size: 24px;
+    font-weight: 600;
+    border: 3px solid black;
+    margin-left: 160px;
+    margin-top: 20px;
+    cursor: pointer;
+
+}
+
+.authform-btn:hover {
+    background-color: #97e7f5;
 }
 
 
