--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,11 @@ nav {
 
 .nav-links {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1.5fr;
     column-gap: 10px;
-    width: 600px;
+    width: 700px;
     height: 50px;
-    margin-right: 100px;
+    margin-right: 50px;
     margin-left: 100px;
 }
 
@@ -57,6 +57,13 @@ nav {
 
 .link-text:visited {
     color: black;
+}
+
+.nav-userdisplay {
+    font-size: 18px;
+    color: rgb(74, 72, 72);
+    margin-top: 80px;
+    font-weight: 400;
 }
 
 /*Home Page*/
